deployments/kubernetes/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: raft
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: raft
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
    - name: http
      port: 8080
      targetPort: http
